Refactor configuration of base types and array types